--- a/form.html
+++ b/form.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
-<html class="form-page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <title>Погнали - направления</title>
 </head>
 
-<body class="page__body">
+<body class="page form-page">
 <header class="page-header">
-  <a class="logo page-header__logo">
-    <img class="logo__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Логотип Погнали?">
+  <a class="logo logo__header" href="index.html">
+    <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
   </a>
   <button class="page-header__toggle" type="button">
-    <img class="page-header__button--img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Открыть меню">
+    <img class="page-header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
   </button>
   <h1 class="page-header__title">Направления</h1>
 </header>
 
-<main class="page-main">
+<main>
 
 /*Пропущены красные блоки*/
 
 </main>
 
 <footer class="page-footer">
-  <a class="logo page-footer__logo">
-    <img class="logo__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Логотип Погнали?">
+  <a class="logo logo--footer" href="index.html">
+    <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
   </a>
   <div class="page-footer__social social">
     <ul class="social__list">
       <li class="social__item">
         <a class="social__link social__link--facebook" href="https://www.facebook.com">
-          <img class="social__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Фейсбук">
+          <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фейсбук">
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--vkontakte" href="https://vk.com">
-          <img class="social__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Вконтакте">
+          <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Вконтакте">
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--instagram" href="https://www.instagram.com">
-          <img class="social__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Инстаграмм">
+          <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Инстаграмм">
         </a>
       </li>
     </ul>
   </div>
   <div class="page-footer__copyright copyright">
     <b class="copyright__text">Разработано:</b>
-    <a class="copyright__link" href="https://htmlacademy.ru">
-      <img class="copyright__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Сайт HTML Academy">
+    <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+      <img class="copyright__img" src="https://via.placeholder.com/" width="40" height="40" alt="Сайт HTML Academy">
     </a>
   </div>
 </footer>
