--- a/form.html
+++ b/form.html
@@ -7,14 +7,14 @@
 </head>
 
 <body class="page form-page">
-<header class="page-header">
+<header class="header">
   <a class="logo logo__header" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
   </a>
-  <button class="page-header__toggle" type="button">
-    <img class="page-header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
+  <button class="header__toggle" type="button">
+    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
   </button>
-  <h1 class="page-header__title">Направления</h1>
+  <h1 class="header__title">Направления</h1>
 </header>
 
 <main>
@@ -23,11 +23,11 @@
 
 </main>
 
-<footer class="page-footer">
+<footer class="footer">
   <a class="logo logo--footer" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
   </a>
-  <div class="page-footer__social social">
+  <div class="footer__social social">
     <ul class="social__list">
       <li class="social__item">
         <a class="social__link social__link--facebook" href="https://www.facebook.com">
@@ -46,7 +46,7 @@
       </li>
     </ul>
   </div>
-  <div class="page-footer__copyright copyright">
+  <div class="footer__copyright copyright">
     <b class="copyright__text">Разработано:</b>
     <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
       <img class="copyright__img" src="https://via.placeholder.com/" width="40" height="40" alt="Сайт HTML Academy">
